# slam-ai-skill-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: remote-access.md
examples/: bandwagon_reverse_ssh.env.example.json  cloudflare_named_tunnel.env.example.json  mcp-config.json  query_skill_context.ps1  query_status.ps1  resolve_gateway_base_url.ps1  search_papers.ps1  start_lan_gateway.ps1
public/: slam-ai-endpoints.json
scripts/: check_remote_access_on_startup.ps1  configure_bandwagon_path_proxy.ps1  configure_bandwagon_vps.ps1  configure_cloudflare_named_tunnel.ps1  install_windows_startup.ps1  register_firewall_rule.ps1  setup_bandwagon_nginx.sh  setup_bandwagon_nginx_path_proxy.sh  start_bandwagon_reverse_tunnel.ps1  start_cloudflare_named_tunnel.ps1  start_cloudflare_quick_tunnel.ps1  start_gateway_from_env.ps1  start_tunnelto_tunnel.ps1  update_public_endpoint_manifest.ps1  watch_bandwagon_reverse_tunnel.ps1  watch_cloudflare_named_tunnel.ps1  watch_cloudflare_quick_tunnel.ps1
skills/graphrag-corpus/: SKILL.md
skills/graphrag-corpus/agents/: openai.yaml
skills/graphrag-corpus/references/: corpus-contract.md  packaging.md  query-patterns.md  refresh-workflow.md
skills/graphrag-corpus/scripts/: profile_corpus.py
skills/slam-ai/: SKILL.md
skills/slam-ai/agents/: openai.yaml
skills/slam-ai/references/: automation.md  current-state.md  daily-loop-state.md  import-policy.md  quick-workflow.md  remote-access.md
src/slam_ai_gateway/: __init__.py  config.py  corpus.py  http_server.py  mcp_server.py
