[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-ai-skill-gateway"
version = "0.1.0"
description = "HTTP and MCP gateway for the local SLAM AI literature corpus."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SLAM AI Corpus Maintainers" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
slam-ai-http = "slam_ai_gateway.http_server:main"
slam-ai-mcp = "slam_ai_gateway.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

